--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
     <api.comparison.version>5.3</api.comparison.version>
     <hc.animal-sniffer.signature.ignores>javax.net.ssl.SSLEngine,javax.net.ssl.SSLParameters,java.nio.ByteBuffer,java.nio.CharBuffer</hc.animal-sniffer.signature.ignores>
     <japicmp.version>0.15.4</japicmp.version>
+    <compress.version>1.26.1</compress.version>
   </properties>
 
   <dependencyManagement>
@@ -115,6 +116,11 @@
       <dependency>
         <groupId>org.apache.httpcomponents.client5</groupId>
         <artifactId>httpclient5-cache</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents.client5</groupId>
+        <artifactId>httpclient5-compress</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -182,6 +188,11 @@
         <version>${hamcrest.version}</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-compress</artifactId>
+        <version>${compress.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -189,6 +200,7 @@
     <module>httpclient5</module>
     <module>httpclient5-fluent</module>
     <module>httpclient5-cache</module>
+    <module>httpclient5-compress</module>
     <module>httpclient5-testing</module>
   </modules>
 
@@ -367,6 +379,10 @@
             <group>
               <title>Apache HttpClient Fluent</title>
               <packages>org.apache.hc.client5.http.fluent*</packages>
+            </group>
+            <group>
+              <title>Apache HttpClient Compress</title>
+              <packages>org.apache.hc.client5.http.compress*</packages>
             </group>
             <group>
               <title>Apache HttpClient Testing</title>
