--- a/httpclient5-compress/pom.xml
+++ b/httpclient5-compress/pom.xml
@@ -76,6 +76,10 @@
       <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-compress</artifactId>
+    </dependency>
   </dependencies>
 
   <reporting>
