--- a/httpclient5/pom.xml
+++ b/httpclient5/pom.xml
@@ -80,6 +80,7 @@
     <dependency>
       <groupId>org.brotli</groupId>
       <artifactId>dec</artifactId>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -95,10 +96,6 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-compress</artifactId>
     </dependency>
   </dependencies>
 
