--- a/httpclient5-compress/pom.xml
+++ b/httpclient5-compress/pom.xml
@@ -90,6 +90,10 @@
       <artifactId>dec</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents.core5</groupId>
+      <artifactId>httpcore5</artifactId>
+    </dependency>
 
   </dependencies>
 
