--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
     <api.comparison.version>5.3</api.comparison.version>
     <hc.animal-sniffer.signature.ignores>javax.net.ssl.SSLEngine,javax.net.ssl.SSLParameters,java.nio.ByteBuffer,java.nio.CharBuffer</hc.animal-sniffer.signature.ignores>
     <japicmp.version>0.15.4</japicmp.version>
+    <commpress.version>1.26.2</commpress.version>
   </properties>
 
   <dependencyManagement>
@@ -181,6 +182,11 @@
         <artifactId>hamcrest</artifactId>
         <version>${hamcrest.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-compress</artifactId>
+        <version>${commpress.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
